# aoc

./: aoc.cabal  flake.nix  hie.yaml  mprocs.yaml  scripts.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 8g5g68ndhadn53q62k3xyaya7s1xy989-source
app/: Main.hs
input/Y2015/: D19.txt
src/: Utils.hs
src/Y2015/: D01.hs  D02.hs  D03.hs  D04.hs  D05.hs  D06.hs  D07.hs  D08.hs  D09.hs  D10.hs  D11.hs  D12.hs  D13.hs  D14.hs  D15.hs  D16.hs  D17.hs  D18.hs  D19.hs  D20.hs  D21.hs  D22.hs
test/: Main.hs  Property.hs  Utils.hs
test/Y2015/: D01Spec.hs  D02Spec.hs  D03Spec.hs  D04Spec.hs  D05Spec.hs  D06Spec.hs  D07Spec.hs  D08Spec.hs  D09Spec.hs  D10Spec.hs  D11Spec.hs  D12Spec.hs  D13Spec.hs  D14Spec.hs  D15Spec.hs  D16Spec.hs  D17Spec.hs  D18Spec.hs  D19Spec.hs  D20Spec.hs  D21Spec.hs  D22Spec.hs
