cabal-version: 3.4
name:          aoc
version:       0.0.0.0

-- synopsis:       $synopsis
-- description:    $description
-- category:       $category
-- homepage:       $gitrepo#readme
-- bug-reports:    $gitrepo/issues
-- maintainer:     $maintainer
build-type:    Simple

-- source-repository head
--   type: git
--   location: $gitrepo

common common-opts
  default-extensions:
    AllowAmbiguousTypes
    BlockArguments
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

  build-depends:
    , aeson
    , async
    , base
    , binary
    , bytestring
    , containers
    , deriving-aeson
    , foldl
    , primitive
    , safe-exceptions
    , text
    , unordered-containers
    , vector

  -- Codecs
  -- Parallelism
  -- Mutability
  -- Binary
  -- Containers
  -- Utilities
  default-language:   Haskell2010

library
  import:          common-opts

  -- cabal-fmt: expand src
  exposed-modules: Core
  hs-source-dirs:  src

executable aoc
  import:         common-opts
  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:  aoc

test-suite aoc-tests
  import:         common-opts
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  ghc-options:
    -Wall -threaded -rtsopts -with-rtsopts=-N -fdefer-typed-holes -O0

  main-is:        Main.hs

  -- cabal-fmt: expand test -Main
  other-modules:
    CoreSpec
    Spec

  build-depends:
    , aoc
    , hedgehog
    , hspec
    , hspec-core
    , hspec-discover
    , hspec-expectations
    , hspec-hedgehog
