cabal-version: 3.4
name:          aoc
version:       0.0.0.0

-- synopsis:       $synopsis
-- description:    $description
-- category:       $category
-- homepage:       $gitrepo#readme
-- bug-reports:    $gitrepo/issues
-- maintainer:     $maintainer
build-type:    Simple

-- source-repository head
--   type: git
--   location: $gitrepo

common common-opts
  default-extensions:
    AllowAmbiguousTypes
    BlockArguments
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

  build-depends:
    , aeson
    , base
    , bytestring
    , containers
    , foldl
    , megaparsec
    , text
    , unordered-containers
    , vector

  default-language:   Haskell2010

library
  import:          common-opts

  -- cabal-fmt: expand src
  exposed-modules:
    Core
    Y2015.D01
    Y2015.D02
    Y2015.D03

  hs-source-dirs:  src

executable aoc
  import:         common-opts
  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:  aoc

test-suite aoc-tests
  import:         common-opts
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  ghc-options:
    -Wall -threaded -rtsopts -with-rtsopts=-N -fdefer-typed-holes -O0

  main-is:        Main.hs

  -- cabal-fmt: expand test -Main
  other-modules:
    CoreSpec
    Property
    Spec
    Utils
    Y2015.D01Spec
    Y2015.D02Spec
    Y2015.D03Spec

  build-depends:
    , aoc
    , hedgehog
    , HUnit
    , hspec               >=2.11.1
    , hspec-api
    , hspec-core
    , hspec-discover
    , hspec-expectations
    , hspec-hedgehog
    , pretty-simple
