cabal-version: 3.4
name:          aoc
version:       0.0.0.0

-- synopsis:       $synopsis
-- description:    $description
-- category:       $category
-- homepage:       $gitrepo#readme
-- bug-reports:    $gitrepo/issues
-- maintainer:     $maintainer
build-type:    Simple

-- source-repository head
--   type: git
--   location: $gitrepo

common common-opts
  default-extensions:
    AllowAmbiguousTypes
    BlockArguments
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

  build-depends:
    , aeson
    , base
    , bytestring
    , containers
    , cryptohash-md5
    , megaparsec
    , mtl
    , parser-combinators
    , scientific
    , text
    , unordered-containers
    , vector

  default-language:   Haskell2010

library
  import:          common-opts

  -- cabal-fmt: expand src
  exposed-modules:
    Utils
    Y2015.D01
    Y2015.D02
    Y2015.D03
    Y2015.D04
    Y2015.D05
    Y2015.D06
    Y2015.D07
    Y2015.D08
    Y2015.D09
    Y2015.D10
    Y2015.D11
    Y2015.D12
    Y2015.D13
    Y2015.D14
    Y2015.D15
    Y2015.D16
    Y2015.D17
    Y2015.D18

  hs-source-dirs:  src
  ghc-options:
    -Wall -threaded -rtsopts -with-rtsopts=-N -fdefer-typed-holes -O0

executable aoc
  import:         common-opts
  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:  aoc

test-suite aoc-tests
  import:         common-opts
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  ghc-options:
    -Wall -threaded -rtsopts -with-rtsopts=-N -fdefer-typed-holes -O0

  main-is:        Main.hs

  -- cabal-fmt: expand test -Main
  other-modules:
    Property
    Spec
    Utils
    Y2015.D01Spec
    Y2015.D02Spec
    Y2015.D03Spec
    Y2015.D04Spec
    Y2015.D05Spec
    Y2015.D06Spec
    Y2015.D07Spec
    Y2015.D08Spec
    Y2015.D09Spec
    Y2015.D10Spec
    Y2015.D11Spec
    Y2015.D12Spec
    Y2015.D13Spec
    Y2015.D14Spec
    Y2015.D15Spec
    Y2015.D16Spec
    Y2015.D17Spec
    Y2015.D18Spec

  build-depends:
    , aoc
    , hedgehog
    , hspec               >=2.11.1
    , hspec-api
    , hspec-core
    , hspec-discover
    , hspec-expectations
    , hspec-hedgehog
    , HUnit
    , pretty-simple
